--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -1,25 +1,41 @@
-.navbar {
+.stashesOverview {
   width: 100vw;
-  height: 10px;
-  position: sticky;
-  top: 0;
-  background-color: var(--dark-blue);
+  display: flex;
 }
-.navbar .navbar-logo {
-  color: var(--off-red);
-  font-size: 2rem;
-  font-family: "Titan One", cursive;
-}
-
-.sidebar {
+.stashesOverview .sidebar {
   height: 100vh;
   background-color: var(--dark-blue);
+  flex: 0.18;
+  min-width: 180px;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
-.sidebar .sidebar-logo {
-  padding: 1.3rem;
-  background-color: aquamarine;
+.stashesOverview .sidebar .sidebar-logo {
+  cursor: pointer;
+  padding: 1.2rem;
   color: var(--off-red);
-  font-size: 2.9rem;
+  font-size: 2.7rem;
+  font-family: var(--font-logo);
+  font-weight: 900;
+  text-align: center;
+}
+.stashesOverview .sidebar .sidebar-option {
+  cursor: pointer;
+  padding: 0.4rem 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px 0px;
+  font-size: 1.2rem;
+  font-weight: 300;
+  font-family: var(--font-display);
+  color: var(--main-white);
+  transition: background-color 100ms;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.144);
+}
+.stashesOverview .sidebar .sidebar-option:hover {
+  opacity: 0.9;
+  background-color: #0e1958;
 }
 
 *,
@@ -38,10 +54,12 @@
   --main-white: #fdfffc;
   --dark-blue: #020887;
   --off-red: #de3c4b;
+  --font-logo: "Titan One", cursive;
+  --font-display: "Lato", sans-serif;
 }
 
 body {
-  height: 100vh;
+  height: 10vh;
   background-color: var(--main-white);
 }
 
