--- a/stash/src/components/stashesOverview/stashesOverview.scss
+++ b/stash/src/components/stashesOverview/stashesOverview.scss
@@ -2,4 +2,5 @@
     width: 100vw;
     display: flex;
     @import './sidebar/sidebar';
+    @import './stashesOverview-components//StOv-storage/stashstorage';
 }
