--- a/stash/src/components/stashesOverview/sidebar/sidebar.scss
+++ b/stash/src/components/stashesOverview/sidebar/sidebar.scss
@@ -1,13 +1,13 @@
 .sidebar {
     height: 100vh;
     background-color: var(--dark-blue);
-    flex: 0.18;
+    flex: 0.2;
     min-width: 180px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-anchor: none;
+    // overflow-y: scroll;
     & .sidebar-logo {
         cursor: pointer;
-
         padding: 1.2rem;
         color: var(--off-red);
         font-size: 2.7rem;
@@ -18,22 +18,24 @@
 
     & .sidebar-option {
         cursor: pointer;
-        padding: 0.4rem 1.2rem;
+        padding: 0.3rem 0.7rem;
         display: flex;
-        justify-content: center;
         align-items: center;
-        margin: 8px 0px;
-        font-size: 1.2rem;
+        margin: 12px 0px;
+        font-size: 1.3rem;
         font-weight: 300;
         font-family: var(--font-display);
         color: var(--main-white);
         transition: background-color 100ms;
         // border-top: solid 1px rgba(255, 255, 255, 0.144);
-        border-bottom: solid 1px rgba(255, 255, 255, 0.144);
 
+        & svg {
+            font-size: 1.5rem;
+            margin-right: 12px;
+        }
         &:hover {
             opacity: 0.9;
-            background-color: #0e1958;
+            background-color: #091247;
         }
     }
 }
