--- a/stash/src/components/stashesOverview/stashesOverview.scss
+++ b/stash/src/components/stashesOverview/stashesOverview.scss
@@ -3,4 +3,5 @@
     display: flex;
     @import './sidebar/sidebar';
     @import './stashesOverview-components//StOv-storage/stashstorage';
+    @import './stashesOverview-components//StOv-stashes/stashstashes';
 }
