--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-stashes/stashstashes.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-stashes/stashstashes.scss
@@ -2,4 +2,18 @@
     height: 100vh;
     width: 100%;
     background: #dacdcd;
+
+    & .currentStashes {
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%;
+        border-radius: 12px;
+        margin: 30px auto;
+        padding: 35px 45px;
+        box-shadow: 0px 0px 20px var(--dark-blue);
+
+        & .stashcard {
+            margin: 10px;
+        }
+    }
 }
