--- a/stash/src/global.css
+++ b/stash/src/global.css
@@ -47,6 +47,18 @@
   width: 100%;
   background: #dacdcd;
 }
+.stashesOverview .stashesContainer .currentStashes {
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
+  border-radius: 12px;
+  margin: 30px auto;
+  padding: 35px 45px;
+  box-shadow: 0px 0px 20px var(--dark-blue);
+}
+.stashesOverview .stashesContainer .currentStashes .stashcard {
+  margin: 10px;
+}
 
 *,
 *::after,
@@ -62,9 +74,9 @@
 }
 
 :root {
-  --main-white: #fdfffc;
-  --dark-blue: #020887;
-  --off-red: #de3c4b;
+  --main-white: #ffeddf;
+  --dark-blue: #0d1321;
+  --off-red: #c5d86d;
   --font-logo: "Titan One", cursive;
   --font-display: "Lato", sans-serif;
 }
@@ -73,6 +85,80 @@ body {
   height: 100vh;
   background-color: var(--main-white);
   overflow: hidden;
+}
+body .stashcard {
+  margin: 0px 10px;
+  cursor: pointer;
+  width: 240px;
+  min-height: 350px;
+  border-radius: 3%;
+  background-color: var(--dark-blue);
+  box-shadow: 2px 2px 5px var(--off-red);
+  position: relative;
+}
+body .stashcard .stashcard-image {
+  height: 165px;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+  background-size: cover;
+}
+body .stashcard .stashcard-info {
+  padding: 0.6rem 1rem;
+  font-family: var(--font-display);
+}
+body .stashcard .stashcard-info .stashcard-header {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: var(--off-red);
+  margin: 0px 0 13px 0;
+}
+body .stashcard .stashcard-info p {
+  margin: 3px 0px;
+  padding: 0.1rem 0;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  font-weight: 300;
+  color: var(--main-white);
+}
+body .stashcard .stashcard-info p span {
+  color: var(--off-red);
+  text-shadow: 0px 0px 0px var(--off-red);
+}
+body .stashcard .stashcard-CreateNew {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+}
+body .stashcard .stashcard-CreateNew .stashcard-Circle {
+  width: 82px;
+  height: 82px;
+  border-radius: 50%;
+  background-color: var(--off-red);
+  position: relative;
+}
+body .stashcard .stashcard-CreateNew .stashcard-Circle div {
+  width: 47px;
+  height: 6px;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: var(--dark-blue);
+}
+body .stashcard .stashcard-CreateNew .stashcard-Circle div:nth-child(1) {
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+body .stashcard .stashcard-CreateNew p {
+  padding-top: 10px;
+  color: var(--off-red);
+  font-size: 1.2rem;
+  font-family: var(--font-display);
+  font-weight: 300;
 }
 
 /*# sourceMappingURL=global.css.map */
