--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-stashes/stashstashes.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-stashes/stashstashes.scss
@@ -1,19 +1,21 @@
 .stashesContainer {
-    height: 100vh;
     width: 100%;
-    background: #dacdcd;
+    height: 100vh;
+    background: var(--main-white);
+    overflow-y: scroll;
 
     & .currentStashes {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-evenly;
         width: 90%;
         border-radius: 12px;
         margin: 30px auto;
-        padding: 35px 45px;
+        padding: 35px 5px;
         box-shadow: 0px 0px 20px var(--dark-blue);
 
         & .stashcard {
-            margin: 10px;
+            margin: 10px 5px;
         }
     }
 }
